--- a/ja_JP.lang
+++ b/ja_JP.lang
@@ -11,9 +11,9 @@ tooltip.extrabotany.description=You can' use it until you complete corresponding
 
 item.extrabotany:manareader.name=マナリーダー
 item.extrabotany:binder.name=ポジジョンリーダー
-item.extrabotany:spiritfuel.name=魂の石炭
+item.extrabotany:spiritfuel.name=魂の燃料
 item.extrabotany:spirit.name=魂の欠片
-item.extrabotany:nightmarefuel.name=悪夢の石炭
+item.extrabotany:nightmarefuel.name=悪夢の燃料
 item.extrabotany:shadowium.name=シャドニウムインゴット
 item.extrabotany:friedchicken.name=フライドキチン
 item.extrabotany:ingotorichalcos.name=オリハルコンインゴット
@@ -44,18 +44,18 @@ item.extrabotany:buddhistrelics.name=全智の原点創造
 item.extrabotany:spearsubspace.name=亜空間の槍
 item.extrabotany:masterhandbag.name=ミニハンドバッグ
 item.extrabotany:coregod.name=神の核
-item.extrabotany:judahoath.name=Judah Oath
-item.extrabotany:judahoathkira.name=Judah Oath KIRA
-item.extrabotany:candy0.name=Halloween Candy Eins
-item.extrabotany:candy1.name=Halloween Candy Zwei
-item.extrabotany:candy2.name=Halloween Candy Drei
-item.extrabotany:candybag.name=Halloween Candy Night
-item.extrabotany:candychris0.name=Christmas Candy Eins
-item.extrabotany:candychris1.name=Christmas Candy Zwei
-item.extrabotany:candychris2.name=Christmas Candy Drei
-item.extrabotany:candybagchris.name=Christmas Garland
-item.extrabotany:walkingcane.name=Walking Cane
-item.extrabotany:foxear.name=Fox Ear
+item.extrabotany:judahoath.name=ユダの誓い
+item.extrabotany:judahoathkira.name=ユダの誓い KIRA
+item.extrabotany:candy0.name=ハロウィンキャンディー Ⅰ
+item.extrabotany:candy1.name=ハロウィンキャンディー Ⅱ
+item.extrabotany:candy2.name=ハロウィンキャンディー Ⅲ
+item.extrabotany:candybag.name=ハロウィンキャンディーの夜
+item.extrabotany:candychris0.name=クリスマスキャンディー Ⅰ
+item.extrabotany:candychris1.name=クリスマスキャンディー Ⅱ
+item.extrabotany:candychris2.name=クリスマスキャンディー Ⅲ
+item.extrabotany:candybagchris.name=クリスマスの花冠
+item.extrabotany:walkingcane.name=ウォーキングステッキ
+item.extrabotany:foxear.name=キツネミミ
 item.extrabotany:lenspush.name=Mana Lens: Push
 item.botania:lenspush.short=Push
 item.extrabotany:lensmana.name=Mana Lens: Mana
@@ -68,11 +68,11 @@ item.extrabotany:lenscloud.name=Mana Lens: Cloud
 item.botania:lenscloud.short=Cloud
 item.extrabotany:lenssexpistol.name=Mana Lens: Track
 item.botania:lenssexpistol.short=Track
-item.extrabotany:bottledstar.name=Bottled Star
-item.extrabotany:bottledflame.name=Bottled Flame
-item.extrabotany:bottledpixie.name=Bottled Pixie
-item.extrabotany:voidcaller.name=Call of the Void
-item.extrabotany:mask.name=Mask
+item.extrabotany:bottledstar.name=ボトル詰めの炎
+item.extrabotany:bottledflame.name=ボトル入りの炎
+item.extrabotany:bottledpixie.name=ビン入りのピクシィ
+item.extrabotany:voidcaller.name=虚空の呼び声
+item.extrabotany:mask.name=仮面
 item.extrabotany:pylon.name=Sims
 item.extrabotany:goggle_jungle.name=Jungle Goggles
 item.extrabotany:goggle_ocean.name=Diving Goggles
@@ -756,8 +756,8 @@ extrabotany.config.enable.candybag=Enable Monster to hold a Halloween Candy Nigh
 extrabotany.config.chance.candybag=The chance that monster will hold a Halloween Candy Night when spawning
 extrabotany.config.enable.ca=Enable Construct's Armory Compat
 
-advancement.extrabotany:nightmarefuelEating=Deep Dark Fantasy
-advancement.extrabotany:nightmarefuelEating.desc=Eat a Nightmare Fuel.(Unbelievable)
+advancement.extrabotany:nightmarefuelEating=DEEP♂DARK♂FANTASY
+advancement.extrabotany:nightmarefuelEating.desc=悪夢の燃料を食べる
 advancement.extrabotany:newknowledgeUnlock=Unlock New Knowledge
 advancement.extrabotany:newknowledgeUnlock.desc=Hold a Lexicon and right-click a Livingrock Pedestal with a Spirit Fuel in it
 advancement.extrabotany:pedestalCraft=CONNECT
@@ -776,20 +776,20 @@ advancement.extrabotany:stardustlotusTeleport=Promise
 advancement.extrabotany:stardustlotusTeleport.desc=Use a Stardust Lotus to teleport yourself
 advancement.extrabotany:manalinkiumUse=Crystalline
 advancement.extrabotany:manalinkiumUse.desc=Bind a Mana Pool to the Manalinkium
-advancement.extrabotany:tinkleUse=Project Diva Desu
+advancement.extrabotany:tinkleUse=Project Diva desu
 advancement.extrabotany:tinkleUse.desc=Dance around a Tinkle Flower
 advancement.extrabotany:bloodyenchantressUse=Sweet Devil
 advancement.extrabotany:bloodyenchantressUse.desc=Use a Bloody Enchantress to generate mana
 advancement.extrabotany:manabufferCraft=ロストワンの号哭
 advancement.extrabotany:manabufferCraft.desc=Craft a Mana Buffer
 advancement.extrabotany:kinggardenCraft=Last Night, Good Night
-advancement.extrabotany:kinggardenCraft.desc=Craft a Garden of King's Law
+advancement.extrabotany:kinggardenCraft.desc=王律庭を作製する
 advancement.extrabotany:annoyingdogSummon=April Fool
 advancement.extrabotany:annoyingdogSummon.desc=The Dog absorbs the artifact
 advancement.extrabotany:failnaughtCraft=from Y to Y
 advancement.extrabotany:failnaughtCraft.desc=Craft the Failnaught
-advancement.extrabotany:cameraCraft=lukaluka night fever
-advancement.extrabotany:cameraCraft.desc=Craft a Shameimaru's Camera
+advancement.extrabotany:cameraCraft=ルカルカ★ナイトフィーバー
+advancement.extrabotany:cameraCraft.desc=射命丸のカメラを作製する
 advancement.extrabotany:gaiaDefeat=KiLLER LADY
 advancement.extrabotany:gaiaDefeat.desc=Defeat Gaia Guardian III
 advancement.extrabotany:natureorbCraft=Single floor
@@ -800,9 +800,9 @@ advancement.extrabotany:achilleshieldCraft=Mr.Wonder
 advancement.extrabotany:achilleshieldCraft.desc=Obtain Achilled Shield
 advancement.extrabotany:mastermanaringCraft=COLOR
 advancement.extrabotany:mastermanaringCraft.desc=Obtain Master Band of Mana
-advancement.extrabotany:mastermanaringFill=Fairytale
+advancement.extrabotany:mastermanaringFill=Fairytale,
 advancement.extrabotany:mastermanaringFill.desc=Fill it to WIN the game
-advancement.extrabotany:musicAll=Senbonzakura
+advancement.extrabotany:musicAll=千本桜
 advancement.extrabotany:musicAll.desc=Patient Listener
 advancement.extrabotany:armorsetCos=cat's dance
 advancement.extrabotany:armorsetCos.desc=Equip Starry Idol Armor Set
@@ -812,11 +812,11 @@ advancement.extrabotany:armorsetSW=Crazy ∞ nighT
 advancement.extrabotany:armorsetSW.desc=Equip Shadow Warrior Armor Set at night
 advancement.extrabotany:airshipMaxheight=Slowly sky
 advancement.extrabotany:airshipMaxheight.desc=Drive a Terrasteel Airship at least 200 metres high
-advancement.extrabotany:infinitewineCraft=shake it
+advancement.extrabotany:infinitewineCraft=shake it!
 advancement.extrabotany:infinitewineCraft.desc=Obtain Infinite Wine
 advancement.extrabotany:excaliberCraft=ReAct
 advancement.extrabotany:excaliberCraft.desc=Obtain Excaliber
-advancement.extrabotany:allStats=Erase or Zero
+advancement.extrabotany:allStats=erase or Zero
 advancement.extrabotany:allStats.desc=Unlock All ExtraBotany's Advancements
 advancement.extrabotany:luckyDraw=Starduster
 advancement.extrabotany:luckyDraw.desc=Obtain Super Rare Item through Reward Bag
