--- a/ja_JP.lang
+++ b/ja_JP.lang
@@ -68,9 +68,9 @@ item.extrabotany:lenscloud.name=Mana Lens: Cloud
 item.botania:lenscloud.short=Cloud
 item.extrabotany:lenssexpistol.name=Mana Lens: Track
 item.botania:lenssexpistol.short=Track
-item.extrabotany:bottledstar.name=ボトル詰めの炎
-item.extrabotany:bottledflame.name=ボトル入りの炎
-item.extrabotany:bottledpixie.name=ビン入りのピクシィ
+item.extrabotany:bottledstar.name=瓶詰めの星
+item.extrabotany:bottledflame.name=瓶詰めの炎
+item.extrabotany:bottledpixie.name=瓶詰めのピクシィ
 item.extrabotany:voidcaller.name=虚空の呼び声
 item.extrabotany:mask.name=仮面
 item.extrabotany:pylon.name=Sims
@@ -79,10 +79,10 @@ item.extrabotany:goggle_ocean.name=Diving Goggles
 item.extrabotany:goggle_snowfield.name=Snow Goggles
 item.extrabotany:goggle_standard.name=Goggles
 item.extrabotany:blackglasses.name=Black Glasses
-item.extrabotany:question.name=Question Mark
-item.extrabotany:lemon.name=Lemon
+item.extrabotany:question.name=クエッションマーク
+item.extrabotany:lemon.name=レモン
 item.extrabotany:thuglife.name=Thug Life
-item.extrabotany:magicfinger.name=Magic Finger
+item.extrabotany:magicfinger.name=魔法の指
 item.extrabotany:manadriverring.name=Ring of Mana Drive
 item.extrabotany:jingweifeather.name=Feather of JingWei
 
