--- a/ja_jp.lang
+++ b/ja_jp.lang
@@ -389,7 +389,7 @@ botania.entry.kinggarden=王律庭
 botania.page.kinggarden0=Garden of King's Law can summon flowers which are recorded by it to give the enemy a heavy blow. Just place it on the Livingrock Pedestal, hold a flower and right-click to record. Different flowers will have different effects.
 botania.page.kinggarden1=For example, Blood Enchantress will deal high magic damage, Sunshine Lily will set enemies on fire. But not every type of flower can be recorded.
 botania.page.kinggarden2=Enuma Elish.
-botania.page.kinggarden3=Sha Nagba Imuru.
+botania.page.kinggarden3=全知なるや全能の星。
 botania.tagline.kinggarden=Ultimate Flower Work
 
 botania.entry.nightmarefuel=悪夢の燃料
@@ -539,7 +539,7 @@ botania.page.cocktail9=One can make you floating, may be better if used on enemi
 botania.page.cocktail10=
 botania.tagline.cocktail=
 
-botania.entry.infinitewine=Infinite Wine
+botania.entry.infinitewine=インフィニティワイン
 botania.page.infinitewine0=Infinite Wine, that you can drink almost infinitly, it only costs mana to refill. To make one, you just need to combine a Special-made Cocktail with heroes medal.You can change the effects by crafting with other varieties of Special-made Cocktail. <br>Be carefull though, if you drink it all before it can refill, you will lose your relic and get a empty mana glass back, and you can only Restore 3 uses per minecraft day.
 botania.tagline.infinitewine=Baccano!
 
@@ -547,7 +547,7 @@ botania.entry.splashgrenade=聖なる手榴弾
 botania.page.splashgrenade0=When a Special-made Cocktail is crafted with Popped Chorus Fruit. You make a Holy Grenade! The Holy Grenade will deal massive damage after exploding, giving bad effects to other creatures and giving the good effects to players. <br>A perfect item, but why is it a grenade?
 botania.tagline.splashgrenade=芸術は爆発だ。
 
-botania.entry.shadowwarrior=Shadow Warrior
+botania.entry.shadowwarrior=影武者
 botania.page.shadowwarrior0=With the magic of Gilded Mashed Potato, we can use Nightmare Fuel and a Elementium Ingot to make Shadowium. It's a very special kind of material.
 botania.page.shadowwarrior1=And Then There Were None.
 botania.page.shadowwarrior2=With the power of Shadowium, Armour crafted with it will give wearer speed, strength, and night vision when the night comes. A sword made of it also seems to call upon Shadow pixies
